# cheshCaneer

./: .gitignore  data.ipynb  example.py  experiments.py
CICD/: app.py
CICD/.github/workflows/: cicd.yaml
Insurance/: .env  demo.py  projectflow.txt  pyproject.toml  requirements.txt  setup.py  template.py
Insurance/config/: schema.yaml
Insurance/notebook/: mongoDB_demo.ipynb  notebook.ipynb
Insurance/oop/: oop.ipynb
Insurance/src.egg-info/: PKG-INFO  SOURCES.txt
Insurance/src/components/: data_ingestion.py  data_validation.py
Insurance/src/configuration/: mongo_db_connection.py
Insurance/src/data_access/: proj1__data.py
Insurance/src/entity/: artifact_entity.py  config_entity.py
Insurance/src/exception/: __init__.py  exception.ipynb
Insurance/src/logger/: __init__.py
Insurance/src/pipeline/: training_pipleline.py
Insurance/src/utils/: main_utils.py
Intelliipaat/: theory.txt
mlflow/: theory.txt
mlflow/mlruns/0/: meta.yaml
mlflow/src/: file2.py  hypertune.py
mlflow/src/mlruns/0/: meta.yaml
mlflow/src/mlruns/456473817535541533/: meta.yaml
mlops/: .env  demo.py  notabook.ipynb  requirements.txt  theory.txt
mlops/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mlops/catboost_info/learn/: events.out.tfevents
mlops/configuration/: mongo_db_connection.py
mlops/constants/: __init__.py
mlops/data_acess/: visa_data.py
mlops/exception/: __init__.py
mlops/logger/: __init__.py
mlops/utility/: artifact_entity.py  config_entity.py  main_utils.py
(+38 files in other folders)
